--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Background video -->
     <video autoplay muted loop class="background-video">
-        <source src="path-to-your-video.mp4" type="video/mp4">
+        <source src="noob.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
