--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         const spinner = document.getElementById('loadingSpinner');
         const submitBtn = document.getElementById('submitBtn');
 
-        const defaultZoneId = 'your-zone-id';  // Replace with your Cloudflare Zone ID
-        const apiKey = 'your-api-key';  // Replace with your Cloudflare API key
-        const domain = 'your-domain.com'; // Replace with your domain
+        const defaultZoneId = 'e05e83ecf0e12b1a2c35272a23a6a06b';  // Replace with your Cloudflare Zone ID
+        const apiKey = 'fJXL9vdp4isBMO8rhmmvUP2jYkQrsrDvan-NoKEB';  // Replace with your Cloudflare API key
+        const domain = 'jooker.live'; // Replace with your domain
 
         form.addEventListener('submit', async function (e) {
             e.preventDefault();
